# WaterTemp

./: .gitignore  .prettierrc.js  Logo.ai  README.md  startup.py  todo.md
.github/workflows/: main.yml
api/: cypress.json  index.js  package-lock.json  package.json
api/certs/: readme.txt
api/config/: config.json
api/cypress/integration/: main.spec.js  test_spec.js
api/plugins/: example.js  getData.js  httpSupport.js  retreveData.js  simpleApi.js  sysStatus.js
api/plugins/basicStats/: index.js
api/plugins/getData/: error.html  index.css  index.css.map  index.html  index.js  index.scss
api/plugins/multiSensor/: Readme.md  alert.js  common.js  config.js  index.js
api/plugins/simpleApi/: apiInfo.html  index.css  index.css.map  index.html  index.js  index.scss
api/plugins/sysStatus/: basePage.html  index.html  index.js
api/src/: common.js  index.js  pluginLoader.js  routes.js  server.js  setup.js
plugins/: Readme.md
plugins/multiSensor/: Readme.md  alert.js  common.js  config.js  index.js
plugins/multiSensor/static/: index.css.map  index.html  (+1 more)
sensor_Interface/: Cargo.toml  config.ini
sensor_Interface/src/: common.rs  config.rs  logging.rs  main.rs  sensor.rs  server.rs
sensor_Interface/src/server/: mod.rs  routes.rs  sensor.rs
stadic/: index.css  index.css.map  index.html  index.js  index.scss  package-lock.json  package.json  serviceworker.js
static/: index.css  index.css.map  index.html  index.js  index.scss  index.ts  manifest.json  serviceworker-loader.js  serviceworker.js  tsconfig.json
static/404/: index.html  index.js  index.ts
(+8 files in other folders)
