[package]
name = "sensor_interface"
version = "0.1.0"
authors = ["Connor Slade <connor@connorcode.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_config_parser = "0.1.5" # One of my own packages :P
tiny_http = "0.6"
chrono = { version = "0.4", features = ["unstable-locales"] }
rand = "0.5"
regex = "1"